Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -129,5 +129,6 @@
   "sn22.79:14.20": "Und welche Dinge zerteilt er weder noch ballt sie zu Wolken zusammen, sondern bleibt stetig, nachdem er sie zerteilt hat? ",
   "sn22.79:14.21": "Form zerteilt er weder noch ballt er sie zu Wolken zusammen, sondern bleibt stetig, nachdem er sie zerteilt hat. ",
   "sn22.79:14.22": "Gefühl … ",
-  "sn22.79:14.23": "Wahrnehmung … "
+  "sn22.79:14.23": "Wahrnehmung … ",
+  "sn22.79:14.24": "Entscheidungen … "
 }
