--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -130,5 +130,6 @@
   "sn22.79:14.21": "Form zerteilt er weder noch ballt er sie zu Wolken zusammen, sondern bleibt stetig, nachdem er sie zerteilt hat. ",
   "sn22.79:14.22": "Gefühl … ",
   "sn22.79:14.23": "Wahrnehmung … ",
-  "sn22.79:14.24": "Entscheidungen … "
+  "sn22.79:14.24": "Entscheidungen … ",
+  "sn22.79:14.25": "Bewusstsein zerteilt er weder noch ballt er es zu Wolken zusammen, sondern bleibt stetig, nachdem er es zerteilt hat. "
 }
