--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -131,5 +131,6 @@
   "sn22.79:14.22": "Gefühl … ",
   "sn22.79:14.23": "Wahrnehmung … ",
   "sn22.79:14.24": "Entscheidungen … ",
-  "sn22.79:14.25": "Bewusstsein zerteilt er weder noch ballt er es zu Wolken zusammen, sondern bleibt stetig, nachdem er es zerteilt hat. "
+  "sn22.79:14.25": "Bewusstsein zerteilt er weder noch ballt er es zu Wolken zusammen, sondern bleibt stetig, nachdem er es zerteilt hat. ",
+  "sn22.79:14.26": "Wenn der Geist eines Mönchs so befreit ist, verehren ihn die Götter mit Indra, Brahmā und Pajāpati von Weitem: "
 }
