--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -133,5 +133,6 @@
   "sn22.79:14.24": "Entscheidungen … ",
   "sn22.79:14.25": "Bewusstsein zerteilt er weder noch ballt er es zu Wolken zusammen, sondern bleibt stetig, nachdem er es zerteilt hat. ",
   "sn22.79:14.26": "Wenn der Geist eines Mönchs so befreit ist, verehren ihn die Götter mit Indra, Brahmā und Pajāpati von Weitem: ",
-  "sn22.79:15.1": "‚Ehre sei dir, du Vollblüter! "
+  "sn22.79:15.1": "‚Ehre sei dir, du Vollblüter! ",
+  "sn22.79:15.2": "Ehre sei dir, Höchster unter den Menschen! "
 }
