Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -135,5 +135,6 @@
   "sn22.79:14.26": "Wenn der Geist eines Mönchs so befreit ist, verehren ihn die Götter mit Indra, Brahmā und Pajāpati von Weitem: ",
   "sn22.79:15.1": "‚Ehre sei dir, du Vollblüter! ",
   "sn22.79:15.2": "Ehre sei dir, Höchster unter den Menschen! ",
-  "sn22.79:15.3": "Die Grundlage deiner Vertiefung "
+  "sn22.79:15.3": "Die Grundlage deiner Vertiefung ",
+  "sn22.79:15.4": "verstehen wir nicht.‘“ "
 }
