--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn22.79:0.1": "Verbundene Lehrreden 22.79 ",
   "sn22.79:0.2": "8. Das Kapitel über Verzehren ",
-  "sn22.79:0.3": "Jucken ",
+  "sn22.79:0.3": "Verzehren ",
   "sn22.79:1.1": "In Sāvatthī. ",
   "sn22.79:1.2": "„Mönche und Nonnen, alle Asketen und Brahmanen, die sich an viele Arten früherer Leben erinnern, sie alle erinnern sich an die fünf mit Ergreifen verbundenen Aggregate, oder an eines von ihnen. ",
   "sn22.79:1.3": "Welche fünf? ",
