Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -681,7 +681,7 @@
   "sn-name:680.sn22.70": "Im Erregenden feststecken ",
   "sn-name:681.sn22.71": "Mit Rādha ",
   "sn-name:682.sn22.72": "Mit Surādha ",
-  "sn-name:683.sn22-khajjaniyavagga": "Das Kapitel über Jucken ",
+  "sn-name:683.sn22-khajjaniyavagga": "Das Kapitel über Verzehren ",
   "sn-name:684.sn22.73": "Vorteilhafte Folgen ",
   "sn-name:685.sn22.74": "Ursprung ",
   "sn-name:686.sn22.75": "Ursprung (2) ",
