Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -103,7 +103,7 @@
   "sn22.79:12.25": "Gefühl … ",
   "sn22.79:12.26": "Wahrnehmung … ",
   "sn22.79:12.27": "Entscheidungen … ",
-  "sn22.79:12.28": "Bewusstsein zerteilt er und ballt es nicht zu Wolken zusamen. ",
+  "sn22.79:12.28": "Bewusstsein zerteilt er und ballt es nicht zu Wolken zusammen. ",
   "sn22.79:13.1": "Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert von Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein. ",
   "sn22.79:13.2": "Wenn er ernüchtert ist, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, ist er befreit. Wenn er befreit ist, weiß er, dass er befreit ist. ",
   "sn22.79:13.3": "Er versteht: ‚Wiedergeburt ist beendet; die spirituelle Reise ist abgeschlossen; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
