Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -40,7 +40,7 @@
   "sn22.79:7.1": "Ein gebildeter edler Schüler denkt darüber nach: ",
   "sn22.79:7.2": "‚Gegenwärtig werde ich von Form verzehrt. ",
   "sn22.79:7.3": "Auch in der Vergangenheit wurde ich von Form verzehrt, geradeso wie jetzt. ",
-  "sn22.79:7.4": "Wenn ich mich darauf freuen würde, in Zukunft an Form Vergnügen zu finden, würde ich auch in der Zukunft von Form verzehrt, geradeso wie jetzt.‘ ",
+  "sn22.79:7.4": "Wenn ich mich darauf freuen würde, in Zukunft an Form Vergnügen zu finden, würde ich auch in der Zukunft von Form verzehrt werden, geradeso wie jetzt.‘ ",
   "sn22.79:7.5": "Wenn er so nachdenkt, sorgt er sich nicht um vergangene Form, ",
   "sn22.79:7.6": "freut sich nicht darauf, zukünftige Form zu genießen, ",
   "sn22.79:7.7": "und übt für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf gegenwärtige Form. ",
