Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "sn22.79:9.2": "‚Gegenwärtig werde ich von Entscheidungen verzehrt …‘ … ",
   "sn22.79:10.1": "‚Gegenwärtig werde ich von Bewusstsein verzehrt. ",
   "sn22.79:10.2": "Auch in der Vergangenheit wurde ich von Bewusstsein verzehrt, geradeso wie jetzt. ",
-  "sn22.79:10.3": "Wenn ich mich darauf freuen würde, in Zukunft an Bewusstsein Vergnügen zu finden, würde ich auch in der Zukunft von Bewusstsein verzehrt, geradeso wie jetzt.‘ ",
+  "sn22.79:10.3": "Wenn ich mich darauf freuen würde, in Zukunft an Bewusstsein Vergnügen zu finden, würde ich auch in der Zukunft von Bewusstsein verzehrt werden, geradeso wie jetzt.‘ ",
   "sn22.79:10.5": "Wenn er so nachdenkt, sorgt er sich nicht um vergangenes Bewusstsein, ",
   "sn22.79:10.6": "freut sich nicht darauf, zukünftiges Bewusstsein zu genießen, ",
   "sn22.79:10.7": "und übt für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf gegenwärtiges Bewusstsein. ",
