--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -19,5 +19,6 @@
   "mn4:3.2": "‘ગાઢ વનમાં દૂર રહેવાની જગ્યાઓ કઠણ હોય છે, એકાંતવાસ જાળવવો મુશ્કેલ હોય છે, એકાંતવાસમાં આનંદ લેવો મુશ્કેલ હોય છે,",
   "mn4:3.3": "મને લાગે છે કે સમાધિ ના પ્રાપ્ત કરી હોય તેવા એકલા રહેનાર ભિક્ષુઓના મનને વન લૂટી લે છે’.",
   "mn4:4.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
-  "mn4:4.2": "જ્યારે પણ કોઇ અશુદ્ધ કાયાકર્મો વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેવાનું રાખે છે ત્યારે એ અશુદ્ધ કાયાકર્મોના પરિણામે તેઓ ડર અને બીકને જાગૃત કરે છે."
+  "mn4:4.2": "જ્યારે પણ કોઇ અશુદ્ધ કાયાકર્મો વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેવાનું રાખે છે ત્યારે એ અશુદ્ધ કાયાકર્મોના પરિણામે તેઓ ડર અને બીકને જાગૃત કરે છે.",
+  "mn4:4.3": "પણ હું અશુદ્ધ કાયાકર્મો સાથે ગાઢ વનમાં રહેવાનું નથી રાખતો."
 }
