--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -21,5 +21,6 @@
   "mn4:4.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:4.2": "જ્યારે પણ કોઇ અશુદ્ધ કાયાકર્મો વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેવાનું રાખે છે ત્યારે એ અશુદ્ધ કાયાકર્મોના પરિણામે તેઓ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:4.3": "પણ હું અશુદ્ધ કાયાકર્મો સાથે ગાઢ વનમાં રહેવાનું નથી રાખતો.",
-  "mn4:4.4": "મારો કાયાકર્મનો આચાર શુદ્ધ છે."
+  "mn4:4.4": "મારો કાયાકર્મનો આચાર શુદ્ધ છે.",
+  "mn4:4.5": "હું એક એવો આર્યસાધક છું જે શુદ્ધ કાયાકર્મો સાથે ગાઢ વનમાં રહેવાનું રાખે છે’"
 }
