--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -23,5 +23,6 @@
   "mn4:4.3": "પણ હું અશુદ્ધ કાયાકર્મો સાથે ગાઢ વનમાં રહેવાનું નથી રાખતો.",
   "mn4:4.4": "મારો કાયાકર્મનો આચાર શુદ્ધ છે.",
   "mn4:4.5": "હું એક એવો આર્યસાધક છું જે શુદ્ધ કાયાકર્મો સાથે ગાઢ વનમાં રહેવાનું રાખે છે’",
-  "mn4:4.6": "બ્રાહ્મણ, આમ શુદ્ધ કાયાકર્મોનો આચાર મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો."
+  "mn4:4.6": "બ્રાહ્મણ, આમ શુદ્ધ કાયાકર્મોનો આચાર મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
+  "mn4:5-7.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
 }
