--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -25,5 +25,5 @@
   "mn4:4.5": "હું એક એવો આર્યસાધક છું જે શુદ્ધ કાયાકર્મો સાથે ગાઢ વનમાં રહેવાનું રાખે છે’",
   "mn4:4.6": "બ્રાહ્મણ, આમ શુદ્ધ કાયાકર્મોનો આચાર મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
   "mn4:5-7.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
-  "mn4:5-7.2": "જ્યારે પણ કોઇ અશુદ્ધ વાણીકર્મો વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેવાનું રાખે છે ત્યારે એ અશુદ્ધ વાણીકર્મોના પરિણામે તેઓ ડર અને બીકને જાગૃત કરે છે."
+  "mn4:5-7.2": "જ્યારે પણ કોઇ અશુદ્ધ વાણીકર્મો વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેવાનું રાખે છે ત્યારે એ અશુદ્ધ વાણીકર્મોના પરિણામે તેઓ ડર અને બીકને જાગૃત કરે છે …"
 }
