--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -26,5 +26,6 @@
   "mn4:4.6": "બ્રાહ્મણ, આમ શુદ્ધ કાયાકર્મોનો આચાર મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
   "mn4:5-7.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:5-7.2": "જ્યારે પણ કોઇ અશુદ્ધ વાણીકર્મો વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેવાનું રાખે છે ત્યારે એ અશુદ્ધ વાણીકર્મોના પરિણામે તેઓ ડર અને બીકને જાગૃત કરે છે …",
-  "mn4:5-7.3": "અશુદ્ધ માનસિક કર્મો વાળા સાધક અથવા બ્રાહ્મણ …"
+  "mn4:5-7.3": "અશુદ્ધ માનસિક કર્મો વાળા સાધક અથવા બ્રાહ્મણ …",
+  "mn4:5-7.4": "જ્યારે પણ કોઇ અશુદ્ધ આજીવિકા વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેવાનું રાખે છે ત્યારે એ અશુદ્ધ આજીવિકાના પરિણામે તેઓ ડર અને બીકને જાગૃત કરે છે."
 }
