--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -31,5 +31,6 @@
   "mn4:5-7.5": "પણ હું અશુદ્ધ આજીવિકા સાથે ગાઢ વનમાં રહેવાનું નથી રાખતો.",
   "mn4:5-7.6": "મારી આજીવિકા શુદ્ધ છે.",
   "mn4:5-7.7": "હું એક એવો આર્યસાધક છું જે શુદ્ધ આજીવિકા સાથે ગાઢ વનમાં રહેવાનું રાખે છે’",
-  "mn4:5-7.8": "બ્રાહ્મણ, આમ શુદ્ધ આજીવિકા મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો."
+  "mn4:5-7.8": "બ્રાહ્મણ, આમ શુદ્ધ આજીવિકા મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
+  "mn4:8.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
 }
