--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -32,5 +32,6 @@
   "mn4:5-7.6": "મારી આજીવિકા શુદ્ધ છે.",
   "mn4:5-7.7": "હું એક એવો આર્યસાધક છું જે શુદ્ધ આજીવિકા સાથે ગાઢ વનમાં રહેવાનું રાખે છે’",
   "mn4:5-7.8": "બ્રાહ્મણ, આમ શુદ્ધ આજીવિકા મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
-  "mn4:8.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
+  "mn4:8.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
+  "mn4:8.2": "જ્યારે પણ કોઇ લોભી અને કામવાસનામાં અતિશય રસ રાખવા વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેવાનું રાખે છે ત્યારે લોભ અને કામવાસનામાં અતિશય રસ રાખવાને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે."
 }
