--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -37,5 +37,6 @@
   "mn4:8.3": "પણ હું લોભ અને કામવાસનામાં અતિશય રસ સહિત ગાઢ વનમાં રહેવાનું નથી રાખતો.",
   "mn4:8.4": "હું લોભ અને કામવાસનામાં અતિશય રસ રહિત છું.",
   "mn4:8.5": "હું એક એવો આર્યસાધક છું જે  લોભ અને કામવાસનામાં અતિશય રસ રહિત ગાઢ વનમાં રહેવાનું રાખે છે’",
-  "mn4:8.6": "બ્રાહ્મણ, આમ લોભ અને કામવાસનામાં અતિશય રસ રહિતતા મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો."
+  "mn4:8.6": "બ્રાહ્મણ, આમ લોભ અને કામવાસનામાં અતિશય રસ રહિતતા મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
+  "mn4:9.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
 }
