--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -39,5 +39,5 @@
   "mn4:8.5": "હું એક એવો આર્યસાધક છું જે  લોભ અને કામવાસનામાં અતિશય રસ રહિત ગાઢ વનમાં રહેવાનું રાખે છે’",
   "mn4:8.6": "બ્રાહ્મણ, આમ લોભ અને કામવાસનામાં અતિશય રસ રહિતતા મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
   "mn4:9.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
-  "mn4:9.2": "જ્યારે પણ કોઇ દ્વેષ અને ઘૃણા વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેવાનું રાખે છે ત્યારે દ્વેષ અને ઘૃણાને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે."
+  "mn4:9.2": "જ્યારે પણ કોઇ દ્વેષ અને ઘૃણા વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે દ્વેષ અને ઘૃણાને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે."
 }
