Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -20,7 +20,7 @@
   "mn4:3.3": "મને લાગે છે કે સમાધિ ના પ્રાપ્ત કરી હોય તેવા એકલા રહેનાર ભિક્ષુઓના મનને વન લૂટી લે છે’.",
   "mn4:4.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:4.2": "‘જ્યારે પણ કોઇ અશુદ્ધ કાયાકર્મો વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે એ અશુદ્ધ કાયાકર્મોના પરિણામે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
-  "mn4:4.3": "પણ હું અશુદ્ધ કાયાકર્મો સાથે ગાઢ વનમાં રહેવાનું નથી રાખતો.",
+  "mn4:4.3": "પણ હું અશુદ્ધ કાયાકર્મો સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:4.4": "મારો કાયાકર્મનો આચાર શુદ્ધ છે.",
   "mn4:4.5": "હું એક એવો આર્યસાધક છું જે શુદ્ધ કાયાકર્મો સાથે ગાઢ વનમાં રહેવાનું રાખે છે’",
   "mn4:4.6": "બ્રાહ્મણ, આમ શુદ્ધ કાયાકર્મોનો આચાર મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
