Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -27,7 +27,7 @@
   "mn4:5-7.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:5-7.2": "જ્યારે પણ કોઇ અશુદ્ધ વાણીકર્મો વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે એ અશુદ્ધ વાણીકર્મોના પરિણામે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે …",
   "mn4:5-7.3": "અશુદ્ધ માનસિક કર્મો વાળા સાધક અથવા બ્રાહ્મણ …",
-  "mn4:5-7.4": "જ્યારે પણ કોઇ અશુદ્ધ આજીવિકા વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેવાનું રાખે છે ત્યારે એ અશુદ્ધ આજીવિકાના પરિણામે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
+  "mn4:5-7.4": "જ્યારે પણ કોઇ અશુદ્ધ આજીવિકા વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે એ અશુદ્ધ આજીવિકાના પરિણામે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:5-7.5": "પણ હું અશુદ્ધ આજીવિકા સાથે ગાઢ વનમાં રહેવાનું નથી રાખતો.",
   "mn4:5-7.6": "મારી આજીવિકા શુદ્ધ છે.",
   "mn4:5-7.7": "હું એક એવો આર્યસાધક છું જે શુદ્ધ આજીવિકા સાથે ગાઢ વનમાં રહેવાનું રાખે છે’",
