Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -42,5 +42,6 @@
   "mn4:9.2": "જ્યારે પણ કોઇ દ્વેષ અને ઘૃણા વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે દ્વેષ અને ઘૃણાને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:9.3": "પણ હું દ્વેષ અને ઘૃણા સહિત ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:9.4": "હું દ્વેષ અને ઘૃણા રહિત છું.",
-  "mn4:9.5": "હું એક એવો આર્યસાધક છું જે દ્વેષ અને ઘૃણા રહિત ગાઢ વનમાં રહેઠાણ રાખે છે’"
+  "mn4:9.5": "હું એક એવો આર્યસાધક છું જે દ્વેષ અને ઘૃણા રહિત ગાઢ વનમાં રહેઠાણ રાખે છે’",
+  "mn4:9.6": "બ્રાહ્મણ, આમ દ્વેષ અને ઘૃણા રહિતતા મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો."
 }
