--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -43,6 +43,6 @@
   "mn4:9.3": "પણ હું દ્વેષ અને ઘૃણા સહિત ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:9.4": "હું પ્રેમળ મનનો છું.",
   "mn4:9.5": "હું એક એવો આર્યસાધક છું જે પ્રેમળ મન સાથે ગાઢ વનમાં રહેઠાણ રાખે છે’",
-  "mn4:9.6": "બ્રાહ્મણ, આમ દ્વેષ અને ઘૃણા રહિતતા મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
+  "mn4:9.6": "બ્રાહ્મણ, આમ મારામાં પ્રેમળ મન જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
   "mn4:10.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
 }
