Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -45,5 +45,6 @@
   "mn4:9.5": "હું એક એવો આર્યસાધક છું જે પ્રેમળ મન સાથે ગાઢ વનમાં રહેઠાણ રાખે છે’",
   "mn4:9.6": "બ્રાહ્મણ, આમ મારામાં પ્રેમળ મન જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
   "mn4:10.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
-  "mn4:10.2": "‘જ્યારે પણ કોઇ આળસ અને સુસ્તી વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે આળસ અને સુસ્તીને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે."
+  "mn4:10.2": "‘જ્યારે પણ કોઇ આળસ અને સુસ્તી વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે આળસ અને સુસ્તીને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
+  "mn4:10.3": "પણ હું આળસ અને સુસ્તી સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો."
 }
