--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -47,5 +47,6 @@
   "mn4:10.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:10.2": "‘જ્યારે પણ કોઇ આળસ અને સુસ્તી વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે આળસ અને સુસ્તીને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:10.3": "પણ હું આળસ અને સુસ્તી સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
-  "mn4:10.4": "હું આળસ અને સુસ્તી રહિત છું."
+  "mn4:10.4": "હું આળસ અને સુસ્તી રહિત છું.",
+  "mn4:10.5": "હું એક એવો આર્યસાધક છું જે આળસ અને સુસ્તી રહિત ગાઢ વનમાં રહેઠાણ રાખે છે’"
 }
