--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -49,5 +49,6 @@
   "mn4:10.3": "પણ હું આળસ અને સુસ્તી સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:10.4": "હું આળસ અને સુસ્તી રહિત છું.",
   "mn4:10.5": "હું એક એવો આર્યસાધક છું જે આળસ અને સુસ્તી રહિત ગાઢ વનમાં રહેઠાણ રાખે છે’",
-  "mn4:10.6": "બ્રાહ્મણ, આમ આળસ અને સુસ્તી રહિતતા મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો."
+  "mn4:10.6": "બ્રાહ્મણ, આમ આળસ અને સુસ્તી રહિતતા મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
+  "mn4:11.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
 }
