--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -19,7 +19,7 @@
   "mn4:3.2": "‘ગાઢ વનમાં દૂર રહેવાની જગ્યાઓ કઠણ હોય છે, એકાંતવાસ જાળવવો મુશ્કેલ હોય છે, એકાંતવાસમાં આનંદ લેવો મુશ્કેલ હોય છે,",
   "mn4:3.3": "મને લાગે છે કે સમાધિ ના પ્રાપ્ત કરી હોય તેવા એકલા રહેનાર ભિક્ષુઓના મનને વન લૂટી લે છે’.",
   "mn4:4.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
-  "mn4:4.2": "‘જ્યારે પણ કોઇ અશુદ્ધ કાયાકર્મો વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે અશુદ્ધ કાયાકર્મોને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
+  "mn4:4.2": "‘જ્યારે પણ કોઇ અશુદ્ધ કાયાકર્મો વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે અશુદ્ધ કાયાકર્મોના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:4.3": "પણ હું અશુદ્ધ કાયાકર્મો સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:4.4": "મારો કાયાકર્મનો આચાર શુદ્ધ છે.",
   "mn4:4.5": "હું એક એવો આર્યસાધક છું જે શુદ્ધ કાયાકર્મો સાથે ગાઢ વનમાં રહેઠાણ રાખે છે’",
