--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -33,7 +33,7 @@
   "mn4:5-7.7": "હું એક એવો આર્યસાધક છું જે શુદ્ધ આજીવિકા સાથે ગાઢ વનમાં રહેઠાણ રાખે છે’",
   "mn4:5-7.8": "બ્રાહ્મણ, આમ શુદ્ધ આજીવિકા મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
   "mn4:8.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
-  "mn4:8.2": "જ્યારે પણ કોઇ લોભી અને કામવાસનામાં અતિશય રસ રાખવા વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે લોભ અને કામવાસનામાં અતિશય રસ રાખવાને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
+  "mn4:8.2": "જ્યારે પણ કોઇ લોભી અને કામવાસનામાં અતિશય રસ રાખવા વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે લોભ અને કામવાસનામાં અતિશય રસ રાખવાના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:8.3": "પણ હું લોભ અને કામવાસનામાં અતિશય રસ સહિત ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:8.4": "હું લોભ રહિત છું.",
   "mn4:8.5": "હું એક એવો આર્યસાધક છું જે  લોભ રહિત ગાઢ વનમાં રહેઠાણ રાખે છે’",
