--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -51,5 +51,6 @@
   "mn4:10.5": "હું એક એવો આર્યસાધક છું જે આળસ અને સુસ્તી રહિત ગાઢ વનમાં રહેઠાણ રાખે છે’",
   "mn4:10.6": "બ્રાહ્મણ, આમ આળસ અને સુસ્તી રહિતતા મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
   "mn4:11.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
-  "mn4:11.2": "‘જ્યારે પણ કોઇ બેચેન અને અશાંત મન વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે બેચેન અને અશાંત મનના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે."
+  "mn4:11.2": "‘જ્યારે પણ કોઇ બેચેન અને અશાંત મન વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે બેચેન અને અશાંત મનના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
+  "mn4:11.3": "પણ હું બેચેની અને અશાંત મન સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો."
 }
