Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -54,5 +54,6 @@
   "mn4:11.2": "‘જ્યારે પણ કોઇ બેચેન અને અશાંત મન વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે બેચેન અને અશાંત મનના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:11.3": "પણ હું બેચેની અને અશાંત મન સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:11.4": "મારું મન શાંત છે.",
-  "mn4:11.5": "હું એક એવો આર્યસાધક છું જે શાંત મન સાથે ગાઢ વનમાં રહેઠાણ રાખે છે’"
+  "mn4:11.5": "હું એક એવો આર્યસાધક છું જે શાંત મન સાથે ગાઢ વનમાં રહેઠાણ રાખે છે’",
+  "mn4:11.6": "બ્રાહ્મણ, આમ મારામાં શાંત મન જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો."
 }
