Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -59,5 +59,6 @@
   "mn4:12.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:12.2": "‘જ્યારે પણ કોઇ સંદેહ અને અનિશ્ચિત મન વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે સંદેહ અને અનિશ્ચિત મનના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:12.3": "પણ હું સંદેહ અને અનિશ્ચિત મન સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
-  "mn4:12.4": "હું સંદેહ અને અનિશ્ચિતતાથી પાર થઇ ગયો છું."
+  "mn4:12.4": "હું સંદેહ અને અનિશ્ચિતતાથી પાર થઇ ગયો છું.",
+  "mn4:12.5": "હું એક એવો આર્યસાધક છું જે સંદેહ અને અનિશ્ચિતતાથી પાર થઇ ગયેલા મન સાથે ગાઢ વનમાં રહેઠાણ રાખે છે’"
 }
