--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -60,5 +60,6 @@
   "mn4:12.2": "‘જ્યારે પણ કોઇ સંદેહ અને અનિશ્ચિત મન વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે સંદેહ અને અનિશ્ચિત મનના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:12.3": "પણ હું સંદેહ અને અનિશ્ચિત મન સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:12.4": "હું સંદેહ અને અનિશ્ચિતતાથી પાર થઇ ગયો છું.",
-  "mn4:12.5": "હું એક એવો આર્યસાધક છું જે સંદેહ અને અનિશ્ચિતતાથી પાર થઇ ગયેલા મન સાથે ગાઢ વનમાં રહેઠાણ રાખે છે’"
+  "mn4:12.5": "હું એક એવો આર્યસાધક છું જે સંદેહ અને અનિશ્ચિતતાથી પાર થઇ ગયેલા મન સાથે ગાઢ વનમાં રહેઠાણ રાખે છે’",
+  "mn4:12.6": "બ્રાહ્મણ, આમ મારામાં સંદેહ અને અનિશ્ચિતતાથી પાર થઇ ગયેલા મનને જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો."
 }
