--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -64,5 +64,6 @@
   "mn4:12.6": "બ્રાહ્મણ, આમ મારામાં સંદેહ અને અનિશ્ચિતતાથી પાર થઇ ગયેલા મનને જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
   "mn4:13.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:13.2": "‘જ્યારે પણ કોઇ પોતાના વખાણ અને બીજાનો તુચ્છકાર કરનારા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે પોતાના વખાણ અને બીજાનો તુચ્છકાર કરવાના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
-  "mn4:13.3": "પણ હું પોતાના વખાણ અને બીજાનો તુચ્છકાર કરતા ગાઢ વનમાં રહેઠાણ નથી રાખતો."
+  "mn4:13.3": "પણ હું પોતાના વખાણ અને બીજાનો તુચ્છકાર કરતા ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
+  "mn4:13.4": "હું પોતાના વખાણ અને બીજાનો તુચ્છકાર નથી કરતો."
 }
