Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -65,5 +65,6 @@
   "mn4:13.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:13.2": "‘જ્યારે પણ કોઇ પોતાના વખાણ અને બીજાનો તુચ્છકાર કરનારા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે પોતાના વખાણ અને બીજાનો તુચ્છકાર કરવાના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:13.3": "પણ હું પોતાના વખાણ અને બીજાનો તુચ્છકાર કરતા ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
-  "mn4:13.4": "હું પોતાના વખાણ અને બીજાનો તુચ્છકાર નથી કરતો."
+  "mn4:13.4": "હું પોતાના વખાણ અને બીજાનો તુચ્છકાર નથી કરતો.",
+  "mn4:13.5": "હું એક એવો આર્યસાધક છું જે પોતાના વખાણ અને બીજાનો તુચ્છકાર કર્યા વગર ગાઢ વનમાં રહેઠાણ રાખે છે’"
 }
