--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -67,5 +67,6 @@
   "mn4:13.3": "પણ હું પોતાના વખાણ અને બીજાનો તુચ્છકાર કરતા ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:13.4": "હું પોતાના વખાણ અને બીજાનો તુચ્છકાર નથી કરતો.",
   "mn4:13.5": "હું એક એવો આર્યસાધક છું જે પોતાના વખાણ અને બીજાનો તુચ્છકાર કર્યા વગર ગાઢ વનમાં રહેઠાણ રાખે છે’",
-  "mn4:13.6": "બ્રાહ્મણ, આમ પોતાના વખાણ અને બીજાનો તુચ્છકાર ના કરવાનાો આચાર મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો."
+  "mn4:13.6": "બ્રાહ્મણ, આમ પોતાના વખાણ અને બીજાનો તુચ્છકાર ના કરવાનાો આચાર મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
+  "mn4:14.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
 }
