--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -68,5 +68,6 @@
   "mn4:13.4": "હું પોતાના વખાણ અને બીજાનો તુચ્છકાર નથી કરતો.",
   "mn4:13.5": "હું એક એવો આર્યસાધક છું જે પોતાના વખાણ અને બીજાનો તુચ્છકાર કર્યા વગર ગાઢ વનમાં રહેઠાણ રાખે છે’",
   "mn4:13.6": "બ્રાહ્મણ, આમ પોતાના વખાણ અને બીજાનો તુચ્છકાર ના કરવાનાો આચાર મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
-  "mn4:14.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
+  "mn4:14.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
+  "mn4:14.2": "‘જ્યારે પણ કોઇ ડરપોક અને કાયર સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે ડરપોકતા અને કાયરતાના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે."
 }
