--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -70,5 +70,6 @@
   "mn4:13.6": "બ્રાહ્મણ, આમ પોતાના વખાણ અને બીજાનો તુચ્છકાર ના કરવાનાો આચાર મારમાં જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
   "mn4:14.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:14.2": "‘જ્યારે પણ કોઇ ડરપોક અને કાયર સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે ડરપોકતા અને કાયરતાના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
-  "mn4:14.3": "પણ હું ડરપોકતા અને કાયરતા સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો."
+  "mn4:14.3": "પણ હું ડરપોકતા અને કાયરતા સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
+  "mn4:14.4": "હું ડરપોકતા અને કાયરતા રહિત છું."
 }
