--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -71,5 +71,6 @@
   "mn4:14.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:14.2": "‘જ્યારે પણ કોઇ ડરપોક અને કાયર સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે ડરપોકતા અને કાયરતાના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:14.3": "પણ હું ડરપોકતા અને કાયરતા સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
-  "mn4:14.4": "હું ડરપોકતા અને કાયરતા રહિત છું."
+  "mn4:14.4": "હું ડરપોકતા અને કાયરતા રહિત છું.",
+  "mn4:14.5": "હું એક એવો આર્યસાધક છું જે ડરપોકતા અને કાયરતા રહિત ગાઢ વનમાં રહેઠાણ રાખે છે’"
 }
