Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -74,5 +74,6 @@
   "mn4:14.4": "હું ડરપોકતા અને કાયરતા રહિત છું.",
   "mn4:14.5": "હું એક એવો આર્યસાધક છું જે ડરપોકતા અને કાયરતા રહિત ગાઢ વનમાં રહેઠાણ રાખે છે’",
   "mn4:14.6": "બ્રાહ્મણ, આમ મારામાં ડરપોકતા અને કાયરતાનો અભાવ જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
-  "mn4:15.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
+  "mn4:15.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
+  "mn4:15.2": "‘જ્યારે પણ કોઇ લાભ, સત્કાર, અને પ્રખ્યાતિ ચાહનારા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે લાભ, સત્કાર, અને પ્રખ્યાતિ ચાહવાના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે."
 }
