--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -76,5 +76,6 @@
   "mn4:14.6": "બ્રાહ્મણ, આમ મારામાં ડરપોકતા અને કાયરતાનો અભાવ જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
   "mn4:15.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:15.2": "‘જ્યારે પણ કોઇ લાભ, સત્કાર, અને પ્રખ્યાતિ ચાહનારા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે લાભ, સત્કાર, અને પ્રખ્યાતિ ચાહવાના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
-  "mn4:15.3": "પણ હું લાભ, સત્કાર, અને પ્રખ્યાતિ ચાહતા ગાઢ વનમાં રહેઠાણ નથી રાખતો."
+  "mn4:15.3": "પણ હું લાભ, સત્કાર, અને પ્રખ્યાતિ ચાહતા ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
+  "mn4:15.4": "મારામાં બહુ ઓછી ઇચ્છાઓ છે."
 }
