--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -79,5 +79,6 @@
   "mn4:15.3": "પણ હું લાભ, સત્કાર, અને પ્રખ્યાતિ ચાહતા ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:15.4": "મને બહુ ઓછી ઇચ્છાઓ છે.",
   "mn4:15.5": "હું એક એવો આર્યસાધક છું જે ઓછી ઇચ્છાઓ સાથે ગાઢ વનમાં રહેઠાણ રાખે છે’",
-  "mn4:15.6": "બ્રાહ્મણ, આમ મારામાં ઓછી ઇચ્છાઓ જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો."
+  "mn4:15.6": "બ્રાહ્મણ, આમ મારામાં ઓછી ઇચ્છાઓ જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
+  "mn4:16.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
 }
