Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -83,5 +83,5 @@
   "mn4:16.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:16.2": "‘જ્યારે પણ કોઇ પ્રમાદી અને ઓછી શક્તિ વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે આળસ અને સુસ્તીના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:16.3": "પણ હું પ્રમાદ અને ઓછી શક્તિ સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
-  "mn4:16.4": "હું શક્તિશાળી છું."
+  "mn4:16.4": "હું ઉર્જાસભર છું."
 }
