--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -84,5 +84,6 @@
   "mn4:16.2": "‘જ્યારે પણ કોઇ પ્રમાદી અને ઓછી શક્તિ વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે આળસ અને સુસ્તીના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:16.3": "પણ હું પ્રમાદ અને ઓછી શક્તિ સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:16.4": "હું ઉર્જાસભર છું.",
-  "mn4:16.5": "હું એક એવો આર્યસાધક છું જે ઉર્જાસભર ગાઢ વનમાં રહેઠાણ રાખે છે’"
+  "mn4:16.5": "હું એક એવો આર્યસાધક છું જે ઉર્જાસભર ગાઢ વનમાં રહેઠાણ રાખે છે’",
+  "mn4:16.6": "બ્રાહ્મણ, આમ મારમાં ઉર્જાસભરતા જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો."
 }
