--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -85,5 +85,6 @@
   "mn4:16.3": "પણ હું પ્રમાદ અને ઓછી શક્તિ સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:16.4": "હું ઉર્જાસભર છું.",
   "mn4:16.5": "હું એક એવો આર્યસાધક છું જે ઉર્જાસભર ગાઢ વનમાં રહેઠાણ રાખે છે’",
-  "mn4:16.6": "બ્રાહ્મણ, આમ મારમાં ઉર્જાસભરતા જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો."
+  "mn4:16.6": "બ્રાહ્મણ, આમ મારમાં ઉર્જાસભરતા જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
+  "mn4:17.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
 }
