Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
@@ -784,7 +784,7 @@
   "pli-tv-kd20:20.1.6": "A nun should not cancel the invitation ceremony of a monk. ",
   "pli-tv-kd20:20.1.7": "If she does cancel it, it’s not actually canceled, ",
   "pli-tv-kd20:20.1.8": "and she commits an offense of wrong conduct. ",
-  "pli-tv-kd20:20.1.9": "A nun should not speak to a monk to initiate a legal process against him. ",
+  "pli-tv-kd20:20.1.9": "A nun should not direct a monk who has committed an offense. ",
   "pli-tv-kd20:20.1.10": "If she does, it’s not actually done, ",
   "pli-tv-kd20:20.1.11": "and she commits an offense of wrong conduct. ",
   "pli-tv-kd20:20.1.12": "A nun should not make accusations against a monk. ",
