--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr7_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr7_translation-en-brahmali.json
@@ -468,7 +468,7 @@
   "pli-tv-pvr7:30.14": "he is shameless, ignorant, and not a regular monk. ",
   "pli-tv-pvr7:30.15": "When a monk has three qualities, he is not qualified to get permission to correct another: ",
   "pli-tv-pvr7:30.16": "he is shameless, ignorant, and not a regular monk. ",
-  "pli-tv-pvr7:30.17": "When a monk has three qualities, he should not be allowed to speak to initiate a legal process: ",
+  "pli-tv-pvr7:30.17": "When a monk has three qualities, he should not be allowed to direct anyone: ",
   "pli-tv-pvr7:30.18": "he is shameless, ignorant, and not a regular monk. ",
   "pli-tv-pvr7:30.19": "When a monk has three qualities, he should not be asked about the Monastic Law: ",
   "pli-tv-pvr7:30.20": "he is shameless, ignorant, and not a regular monk. ",
