--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -88,5 +88,6 @@
   "mn4:16.6": "બ્રાહ્મણ, આમ મારમાં ઉર્જાસભરતા જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
   "mn4:17.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:17.2": "‘જ્યારે પણ કોઇ ખોટી સ્મૃતિ અને સંપજ્ઞાન વગરના સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે ખોટી સ્મૃતિ અને સંપજ્ઞાનના અભાવના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
-  "mn4:17.3": "પણ હું ખોટી સ્મૃતિ અને સંપજ્ઞાન વગર ગાઢ વનમાં રહેઠાણ નથી રાખતો."
+  "mn4:17.3": "પણ હું ખોટી સ્મૃતિ અને સંપજ્ઞાન વગર ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
+  "mn4:17.4": "મારામાં સાચી સ્મૃતિ ઉપસ્થિત છે."
 }
