--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr7_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr7_translation-en-brahmali.json
@@ -545,7 +545,7 @@
   "pli-tv-pvr7:42.2": "Speak, and with in a leadership; ",
   "pli-tv-pvr7:42.3": "Should not live, should not give, ",
   "pli-tv-pvr7:42.4": "And should not ask for permission. ",
-  "pli-tv-pvr7:43.1": "Should not initiate a legal process, ",
+  "pli-tv-pvr7:43.1": "Should not direct, ",
   "pli-tv-pvr7:43.2": "Two on those who should not be asked; ",
   "pli-tv-pvr7:43.3": "And two on should not reply, ",
   "pli-tv-pvr7:43.4": "And one should not answer. ",
