--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -183,7 +183,7 @@
   "pli-tv-kd12:4.1.39": "He should not criticize those who did the procedure. ",
   "pli-tv-kd12:4.1.40": "He should not cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd12:4.1.41": "He should not cancel the invitation of a regular monk. ",
-  "pli-tv-kd12:4.1.42": "He should not speak to a regular monk to initiate a legal process against him. ",
+  "pli-tv-kd12:4.1.42": "He should not direct a regular monk. ",
   "pli-tv-kd12:4.1.43": "He should not make accusations against a regular monk. ",
   "pli-tv-kd12:4.1.44": "He should not ask a regular monk for permission to accuse him of an offense. ",
   "pli-tv-kd12:4.1.45": "He should not accuse a regular monk of an offense. ",
