--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -44,7 +44,7 @@
   "pli-tv-kd12:1.2.10": "He should not criticize those who did the procedure. ",
   "pli-tv-kd12:1.2.11": "He should not cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd12:1.2.12": "He should not cancel the invitation of a regular monk. ",
-  "pli-tv-kd12:1.2.13": "He should not speak to a regular monk to initiate a legal process against him. ",
+  "pli-tv-kd12:1.2.13": "He shouldn’t direct a regular monk. ",
   "pli-tv-kd12:1.2.14": "He should not make accusations against a regular monk. ",
   "pli-tv-kd12:1.2.15": "He should not ask a regular monk for permission to accuse him of an offense. ",
   "pli-tv-kd12:1.2.16": "He should not accuse a regular monk of an offense. ",
