Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
@@ -807,7 +807,7 @@
   "pli-tv-kd20:20.1.29": "A monk may cancel the invitation ceremony of a nun. ",
   "pli-tv-kd20:20.1.30": "If he cancels it, it is properly canceled, ",
   "pli-tv-kd20:20.1.31": "and there is no offense for him. ",
-  "pli-tv-kd20:20.1.32": "A monk may direct a nun who has committed an offense. ",
+  "pli-tv-kd20:20.1.32": "A monk may direct a nun. ",
   "pli-tv-kd20:20.1.33": "If he does, it is properly done, ",
   "pli-tv-kd20:20.1.34": "and there is no offense for him. ",
   "pli-tv-kd20:20.1.35": "A monk may make accusations against a nun. ",
