--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd20_translation-en-brahmali.json
@@ -776,7 +776,7 @@
   "pli-tv-kd20:19.3.6": "For the third time the Sangha of nuns invites the Sangha of monks to correct it concerning ",
   "pli-tv-kd20:19.3.7": "what you have seen, heard, or suspect. ",
   "pli-tv-kd20:19.3.8": "Please correct the Sangha of nuns, Venerables, out of compassion. If the Sangha of nuns sees a fault, it will make amends.’” ",
-  "pli-tv-kd20:20.1.1": "At that time the nuns canceled the monks’ observance-day ceremony and their invitation ceremony; they directed monks who had committed offenses; they instructed them, got permission from them to correct them, accused them of offenses, and reminded them of offenses. ",
+  "pli-tv-kd20:20.1.1": "At that time the nuns canceled the monks’ observance-day ceremony and their invitation ceremony; they directed them, instructed them, got permission from them to correct them, accused them of offenses, and reminded them of offenses. ",
   "pli-tv-kd20:20.1.2": "They told the Buddha. ",
   "pli-tv-kd20:20.1.3": "“A nun should not cancel the observance-day ceremony of a monk. ",
   "pli-tv-kd20:20.1.4": "If she does cancel it, it’s not actually canceled, ",
