--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.80:0.1": "Verbundene Lehrreden 22.80 ",
   "sn22.80:0.2": "8. Das Kapitel über Verzehren ",
-  "sn22.80:0.3": "Bettler "
+  "sn22.80:0.3": "Bettler ",
+  "sn22.80:1.1": "Einmal hielt sich der Buddha im Land der Sakyer bei Kapilavatthu auf, im Banyanbaum-Kloster. "
 }
