--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.80:0.2": "8. Das Kapitel über Verzehren ",
   "sn22.80:0.3": "Bettler ",
   "sn22.80:1.1": "Einmal hielt sich der Buddha im Land der Sakyer bei Kapilavatthu auf, im Banyanbaum-Kloster. ",
-  "sn22.80:1.2": "Da kleidete der Buddha sich am Morgen an, nahm Schale und Robe und betrat Kapilavatthu zum Almosengang. "
+  "sn22.80:1.2": "Da kleidete der Buddha sich am Morgen an, nahm Schale und Robe und betrat Kapilavatthu zum Almosengang. ",
+  "sn22.80:1.3": "Er zog um Almosen durch Kapilavatthu. Nach dem Essen, als er vom Almosengang zurückkam, ging er in den Großen Wald, "
 }
