Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -9,5 +9,5 @@
   "sn22.80:2.1": "Da kam ihm, als er für sich allein in Klausur war, dieser Gedanke in den Sinn: ",
   "sn22.80:2.2": "„Ich habe den Saṅgha der Mönche und Nonnen fortgeschickt. ",
   "sn22.80:2.3": "Doch da sind Mönche und Nonnen, die neu im Orden sind, kürzlich fortgezogen und neu zu dieser Lehre und Schulung gekommen. ",
-  "sn22.80:2.4": "Wenn sie mich nicht sehen, könnten sie sich ändern und auseinanderfallen. "
+  "sn22.80:2.4": "Wenn sie mich nicht sehen, könnten sie anders werden und auseinanderfallen. "
 }
