Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -92,5 +92,6 @@
   "mn4:17.4": "મારામાં સાચી સ્મૃતિ ઉપસ્થિત છે.",
   "mn4:17.5": "હું એક એવો આર્યસાધક છું જે સાચી સ્મૃતિ સાથે ગાઢ વનમાં રહેઠાણ રાખે છે’",
   "mn4:17.6": "બ્રાહ્મણ, આમ મારામાં સાચી સ્મૃતિ અને સંપજ્ઞાન જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
-  "mn4:18.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
+  "mn4:18.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
+  "mn4:18.2": "‘જ્યારે પણ કોઇ સમાધીહીન અને ભટકતા મન વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે સમાધીહીનતા અને ભટકતા મનના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે."
 }
