Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -98,5 +98,6 @@
   "mn4:18.4": "હું સમાધિસંપન્ન છું.",
   "mn4:18.5": "હું એક એવો આર્યસાધક છું જે સમાધિસંપન્ન થઇ ગયેલા મન સાથે ગાઢ વનમાં રહેઠાણ રાખે છે’",
   "mn4:18.6": "બ્રાહ્મણ, આમ મારામાં સમાધિસંપન્નતા જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
-  "mn4:19.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
+  "mn4:19.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
+  "mn4:19.2": "‘જ્યારે પણ કોઇ મૂર્ખ અને મૂઢ સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે મૂર્ખતા અને મૂઢતાના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે."
 }
