Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn22.80:3.13": "Dass doch der Buddha den Saṅgha der Mönche und Nonnen jetzt genauso unterstütze wie früher!“ ",
   "sn22.80:4.1": "Der Buddha schwieg zum Zeichen der Zustimmung. ",
   "sn22.80:4.2": "Und als der Große Brahmā erkannte, dass der Buddha zugestimmt hatte, verbeugte er sich, umrundete den Buddha respektvoll, die rechte Seite ihm zugewandt, und verschwand eben dort. ",
-  "sn22.80:5.1": "Da kam der Buddha am späten Nachmittag aus seiner Klausur, ging zum Banyanbaum-Kloster und setzte sich auf den ausgebreiteten Sitz. "
+  "sn22.80:5.1": "Da kam der Buddha am späten Nachmittag aus seiner Klausur, ging zum Banyanbaum-Kloster und setzte sich auf den ausgebreiteten Sitz. ",
+  "sn22.80:5.2": "Darauf setzte er seine Wunderkräfte ein und veranlasste, dass die Mönche und Nonnen unsicher zu ihm kamen, allein oder zu zweit. "
 }
