Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "sn22.80:5.2": "Darauf setzte er seine Wunderkräfte ein und veranlasste, dass die Mönche und Nonnen unsicher zu ihm kamen, allein oder zu zweit. ",
   "sn22.80:5.3": "Diese Mönche und Nonnen begaben sich unsicher zum Buddha, verbeugten sich und setzten sich zur Seite  hin. Der Buddha sagte zu ihnen: ",
   "sn22.80:6.1": "„Das Almosenbetteln, Mönche und Nonnen, ist ein extremer Lebensstil. ",
-  "sn22.80:6.2": "Die Welt verflucht euch: ‚Du Bettler, du gehst herum mit der Schale in der Hand!‘ "
+  "sn22.80:6.2": "Die Welt verflucht euch: ‚Du Bettler, du gehst herum mit der Schale in der Hand!‘ ",
+  "sn22.80:6.3": "Doch ernsthafte ehrbare Menschen greifen dazu aus gutem Grund. "
 }
