Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "sn22.80:8.2": "sinnliche, boshafte und grausame Gedanken. ",
   "sn22.80:8.3": "Und wo hören diese drei untauglichen Gedanken restlos auf? ",
   "sn22.80:8.4": "Sie hören bei denen auf, die ihren Geist fest in den vier Arten der Achtsamkeitsmeditation verankert haben oder die die merkmalslose Versenkung entwickeln. ",
-  "sn22.80:8.5": "Eben das ist Anreiz genug, um die merkmalslose Versenkung zu entwickeln. "
+  "sn22.80:8.5": "Eben das ist Anreiz genug, um die merkmalslose Versenkung zu entwickeln. ",
+  "sn22.80:8.6": "Wenn die merkmalslose Versenkung entwickelt und gepflegt wird, bringt sie reiche Frucht und reichen Segen. "
 }
