Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -45,5 +45,6 @@
   "sn22.80:8.5": "Eben das ist Anreiz genug, um die merkmalslose Versenkung zu entwickeln. ",
   "sn22.80:8.6": "Wenn die merkmalslose Versenkung entwickelt und gepflegt wird, bringt sie reiche Frucht und reichen Segen. ",
   "sn22.80:9.1": "Mönche und Nonnen, es gibt zwei Ansichten: ",
-  "sn22.80:9.2": "Ansichten, die die Fortsetzung des Daseins begünstigen, und Ansichten, die das Beenden des Daseins begünstigen. "
+  "sn22.80:9.2": "Ansichten, die die Fortsetzung des Daseins begünstigen, und Ansichten, die das Beenden des Daseins begünstigen. ",
+  "sn22.80:9.3": "Ein gebildeter edler Schüler denkt darüber nach: "
 }
