Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn22.80:9.1": "Mönche und Nonnen, es gibt zwei Ansichten: ",
   "sn22.80:9.2": "Ansichten, die die Fortsetzung des Daseins begünstigen, und Ansichten, die das Beenden des Daseins begünstigen. ",
   "sn22.80:9.3": "Ein gebildeter edler Schüler denkt darüber nach: ",
-  "sn22.80:9.4": "‚Gibt es irgendetwas in der Welt, das ich ergreifen könnte und das ohne Fehler wäre?‘ "
+  "sn22.80:9.4": "‚Gibt es irgendetwas in der Welt, das ich ergreifen könnte und das ohne Fehler wäre?‘ ",
+  "sn22.80:9.5": "Er versteht: "
 }
