Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -49,5 +49,6 @@
   "sn22.80:9.3": "Ein gebildeter edler Schüler denkt darüber nach: ",
   "sn22.80:9.4": "‚Gibt es irgendetwas in der Welt, das ich ergreifen könnte und das ohne Fehler wäre?‘ ",
   "sn22.80:9.5": "Er versteht: ",
-  "sn22.80:9.6": "‚Es gibt nichts in der Welt, das ich ergreifen könnte und das ohne Fehler wäre. "
+  "sn22.80:9.6": "‚Es gibt nichts in der Welt, das ich ergreifen könnte und das ohne Fehler wäre. ",
+  "sn22.80:9.7": "Denn wenn ich ergreife, würde ich nur Form, Gefühl, "
 }
