Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -54,5 +54,6 @@
   "sn22.80:9.8": "Wahrnehmung, ",
   "sn22.80:9.9": "Entscheidungen oder Bewusstsein ergreifen. ",
   "sn22.80:9.10": "Dieses mein Ergreifen wäre eine Bedingung für fortgesetztes Dasein. ",
-  "sn22.80:9.11": "Fortgesetztes Dasein ist eine Bedingung für Wiedergeburt. "
+  "sn22.80:9.11": "Fortgesetztes Dasein ist eine Bedingung für Wiedergeburt. ",
+  "sn22.80:9.12": "Wiedergeburt ist eine Bedingung für das Zustandekommen von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. "
 }
