Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -59,5 +59,6 @@
   "sn22.80:9.13": "So kommt diese ganze Masse des Leidens zustande. ",
   "sn22.80:10.1": "Was meint ihr, Mönche und Nonnen? ",
   "sn22.80:10.2": "Ist Form beständig oder unbeständig?“ ",
-  "sn22.80:10.3": "„Unbeständig, Herr.“ "
+  "sn22.80:10.3": "„Unbeständig, Herr.“ ",
+  "sn22.80:10.4": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
 }
