Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "sn22.80:10.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn22.80:10.8": "„Nein, Herr.“ ",
   "sn22.80:10.9": "Ist Gefühl …“ … ",
-  "sn22.80:10.10": "„Ist Wahrnehmung …“ … "
+  "sn22.80:10.10": "„Ist Wahrnehmung …“ … ",
+  "sn22.80:10.11": "„Sind Entscheidungen …“ … "
 }
