Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -881,6 +881,7 @@
   "sn-name:1556.sn46.43": "Māra ",
   "sn-name:1564.sn46-sakacchavagga": "Das Kapitel über Diskutieren ",
   "sn-name:1565.sn46.51": "Nahrung ",
+  "sn-name:1568.sn46.54": "Voller Liebe ",
   "sn-name:1569.sn46.55": "Mit Saṅgārava ",
   "sn-name:1571.sn46-anapanavagga": "Das Kapitel über Atmen ",
   "sn-name:1577.sn46.62": "Liebe ",
