Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn46.54:0.1": "Verbundene Lehrreden 46.54 ",
   "sn46.54:0.2": "6. Das Kapitel über Diskutieren ",
-  "sn46.54:0.3": "Voller Liebe "
+  "sn46.54:0.3": "Voller Liebe ",
+  "sn46.54:1.1": "Einmal hielt sich der Buddha im Land der Koliyer auf, bei einem Marktflecken mit Namen Haliddavasana. "
 }
